--- a/笔记.md
+++ b/笔记.md
@@ -1606,7 +1606,7 @@ eureka:
   
           <dependency>
               <groupId>org.springframework.cloud</groupId>
-              <artifactId>spring-cloud-config</artifactId>
+              <artifactId>spring-cloud-config-server</artifactId>
           </dependency>
   
           <!--zuul依赖-->
